# minicord

./: .dockerignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
src/: main.py
src/alembic/: env.py
src/impl/database/: __init__.py
